--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Auramah Valley</title>
+    <title>Ielts</title>
     <meta
       name="description"
       content="Nature’s NestA home amidst the Auramah HillsLEARN MOREBuilding EnigmaticLifestyle For SupremacyLEARN MOREExperienceThe Freshness Of NatureLEARN MOREDive into luxurywith our self heating swimming poolLEARN MOREResideIn The Heart Of MountainsLEARN MOREImmerse YourselfInto The World Of LuxuryLEARN MORE STAY IN THE LAP OF NATURE Ultra-luxury Homes spread across 100 acres of forest."
