--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.png" />
+    <meta charset="UTF-8" /> 
+    <link rel="icon" href="/favicon copy.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ielts</title>
+    <title>Prepeve</title>
     <meta
       name="description"
-      content="Nature’s NestA home amidst the Auramah HillsLEARN MOREBuilding EnigmaticLifestyle For SupremacyLEARN MOREExperienceThe Freshness Of NatureLEARN MOREDive into luxurywith our self heating swimming poolLEARN MOREResideIn The Heart Of MountainsLEARN MOREImmerse YourselfInto The World Of LuxuryLEARN MORE STAY IN THE LAP OF NATURE Ultra-luxury Homes spread across 100 acres of forest."
+      content="Description about IELTS here"
     />
-    <meta name="title" property="og:title" content="Auramah Valley" />
-    <meta property="og:image" content="{logo}" />
+    <meta name="title" property="og:title" content="Prepeve" />
+    <meta property="og:image" content="/favicon copy.png" />
     <meta property="og:image:type" content="image/png" />
     <meta
       property="og:description"
-      content="Nature’s NestA home amidst the Auramah HillsLEARN MOREBuilding EnigmaticLifestyle For SupremacyLEARN MOREExperienceThe Freshness Of NatureLEARN MOREDive into luxurywith our self heating swimming poolLEARN MOREResideIn The Heart Of MountainsLEARN MOREImmerse YourselfInto The World Of LuxuryLEARN MORE STAY IN THE LAP OF NATURE Ultra-luxury Homes spread across 100 acres of forest."
+      content="Description about IELTS here"
     />
-    <meta name="Keywords" content="Punjab, Real Estate, Chandigarh" />
+    <meta name="Keywords" content="IELTS, Listening, Speaking, English, Writing" />
   </head>
   <body>
     <div id="root"></div>
