--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Prepeve</title>
     <meta
       name="description"
-      content="Description about IELTS here"
+      content="PrepEve provides online courses for the IELTS Academic and IELTS General Training tests."
     />
     <meta name="title" property="og:title" content="Prepeve" />
     <meta property="og:image" content="/favicon copy.png" />
     <meta property="og:image:type" content="image/png" />
     <meta
       property="og:description"
-      content="Description about IELTS here"
+      content="PrepEve provides online courses for the IELTS Academic and IELTS General Training tests."
     />
     <meta name="Keywords" content="IELTS, Listening, Speaking, English, Writing" />
   </head>
